[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.121.2",
    "fastmcp>=2.13.0.2",
    "httpx>=0.24.1",
    "pydantic>=2.12.4",
]

[project.scripts]
dev-mcp-server = "main:main"

[tool.setuptools]
py-modules = ["main", "models"]