[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.121.2",
    "fastmcp>=3.0.2",
    "httpx>=0.24.1",
    "pydantic>=2.12.4",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
mcp-server = "main:main"

[tool.setuptools]
py-modules = ["main", "models", "tools"]